# Duck-Disciple-Bot

./: .gitignore  .replit  README.md  bot.py  cards.py  config.py  db.py  duck-disciple.service  duck_time.py  generator.py  image.py  log.py  nomic_time.py  pyproject.toml  reminders.py  requirements.txt  scraper.py  sha.py  utils.py
cogs/: cycle.py  image_manipulation.py  locale.py  loot.py  miscellaneous.py  nomic.py  reminders.py  secret.py  vote_tracking.py
config/: config.py  settings.py
core/: db.py  enums.py  image.py  language.py  log.py  loot_tables.py  market_simulation.py  nomic_time.py  prospecting.py  reaction_tracking.py  reminders.py  schedule.py  secret_keeping.py  stopdoing.py  treegen.py  utils.py
core/db/: db_base.py  pools_db.py  reactions_db.py  reminders_db.py  schedule_db.py  settings_db.py
core/db/models/: nomic_models.py  pool_models.py  reaction_models.py  schedule_models.py
extra utilities/: payouts.csv  slots_sample.py
img/: suit_spades.pdn
langs/: en-US.json
tests/: language_tests.py  test_reminders.py  utils_tests.py
